tests/baselines/reference/decoratorMetadataWithImportDeclarationNameCollision4(target=es5).errors.txt
service.ts(1,8): error TS2613: Module '"db"' has no default export. Did you mean to use 'import { db } from "db"' instead?


==== db.ts (0 errors) ====
    export class db {
        public doSomething() {
        }
    }
    
==== service.ts (1 errors) ====
    import db from './db'; // error no default export
           ~~
!!! error TS2613: Module '"db"' has no default export. Did you mean to use 'import { db } from "db"' instead?
    function someDecorator(target) {
        return target;
    }
    @someDecorator
    class MyClass {
        db: db.db;
    
        constructor(db: db.db) {
            this.db = db;
            this.db.doSomething();
        }
    }
    export {MyClass};
    